# bugscope

./: .gitignore  AGENTS.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  pnpm-workspace.yaml  server.js  server.ts  tsconfig.json  vite.config.ts
.github/workflows/: build.yml
data/: companies.lbdb
scripts/: download-liblbug.sh  download_icebug.sh  export-data.ts  init-db.ts  load-data.ts
src/: App.css  App.tsx  data.ts  db.ts  graph.ts  index.css  main.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
